--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>G3 Architechts</title>
     <link rel="stylesheet" href="architects.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-        
+        <nav class="navbar">
+
+
+        </nav>
     </header>
     <main>
         <h3> G3 Architects</h3>
